# AscendUsage

./: .gitignore  Ascend910B3.ini  LICENSE  README.md
demos/exe/: makefile  singlefile.asc  singlefile.cce  test
demos/exe/multi/: device.asc  host.asc
demos/framework/: README.md  install.sh  makefile  run_ops.py
demos/framework/csrc/: ascend_interface.cpp
demos/framework/csrc/kernels/: add.asc  add.h  add_custom.cpp
demos/proj/: CMakeLists.txt  README.md  run.sh
demos/proj/include/: device.h  interface.h
demos/proj/src/: device.asc  interface.asc  main.cpp
docs/: README.md
operators/gemm/: README.md  makefile  run_ops.py
operators/gemm/csrc/: ascend_interface.cpp
operators/gemm/csrc/kernels/: gemm.asc  gemm.h  gemm_torch.cpp  matmul.asc  matmul.h  matmul_torch.cpp
operators/spmm/: README.md
practice/Wan2.2/: .gitignore  README_AU.md  fusion_result.json  generate.py  requirements.txt  run.sh
practice/Wan2.2/wan/: __init__.py  image2video.py
practice/Wan2.2/wan/configs/: wan_i2v_A14B.py
practice/Wan2.2/wan/devhook/: hetero_backend.py  hook.py  vis.py
practice/Wan2.2/wan/distributed/: fsdp.py  sequence_parallel.py  util.py
practice/Wan2.2/wan/modules/: attention.py  model.py  vae2_1.py
practice/Wan2.2/wan/utils/: args.py
